// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonPill>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-outline={false}
      data-size={40}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost 1`] = `
<ButtonPill
  ghost={true}
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={true}
      data-outline={false}
      data-size={40}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost and disabled 1`] = `
<ButtonPill
  disabled={true}
  ghost={true}
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={true}
      data-ghost={true}
      data-outline={false}
      data-size={40}
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined 1`] = `
<ButtonPill
  outline={true}
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-outline={true}
      data-size={40}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<ButtonPill
  disabled={true}
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={true}
      data-ghost={false}
      data-outline={false}
      data-size={40}
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with color 1`] = `
<ButtonPill
  color="message"
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="message"
      data-disabled={false}
      data-ghost={false}
      data-outline={false}
      data-size={40}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with size 1`] = `
<ButtonPill
  size={40}
>
  <FocusRing
    focusRingClass="md-button-pill-focus-ring"
  >
    <button
      className="md-button-pill-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-outline={false}
      data-size={40}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <div>
        Example Text
      </div>
    </button>
  </FocusRing>
</ButtonPill>
`;
